--- a/manifest.json
+++ b/manifest.json
@@ -44,6 +44,10 @@
                 "name": "is_public",
                 "type": "boolean",
                 "default": true
+            },
+            {
+                "name": "admin",
+                "type": "user"
             }
         ]
     }
