--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -8,7 +8,7 @@ location / {
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
   #client_max_body_size 50M;
 
-  try_files $uri $uri/ __PATH__/__PATH__/index.php?$query_string;
+  try_files $uri $uri/ @rewrite;
   
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
@@ -20,4 +20,8 @@ location / {
     fastcgi_param PATH_INFO $fastcgi_path_info;
     fastcgi_param SCRIPT_FILENAME $request_filename;
   }
+}
+
+location @rewrite {
+    rewrite ^/(.+)$ /index.php?page=$1 last;
 }
